# MiKaPo

./: .gitignore  README.md  index.html  next.config.ts  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.json  vercel.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: deploy.yml
pose_solver/: Cargo.toml  LICENSE
pose_solver/pkg/: package.json  pose_solver.d.ts  pose_solver.js  pose_solver_bg.wasm  pose_solver_bg.wasm.d.ts
pose_solver/src/: lib.rs
public/: mikapo_animation.vmd
public/animation/: 0-540.vmd  Man.vmd  Stand.vmd  Zyy.vmd
public/model/Thoth/: Thoth.pmx
public/model/原神-荧/: readme【一定要看】.txt  原神-荧.pmx
public/model/尘白禁区-里芙/: 使用规则（必读）.txt  尘白禁区-里芙.pmx
public/model/深空之眼-塞勒涅/: 深空之眼-塞勒涅.pmx
public/model/深空之眼-塞勒涅2/: 深空之眼-塞勒涅2.pmx
public/model/深空之眼-大梵天/: 使用规则.txt  深空之眼-大梵天.pmx
public/model/深空之眼-托特/: 使用规则.txt  深空之眼-托特.pmx
public/model/深空之眼-托特2/: 深空之眼-托特2.pmx
public/model/深空之眼-梵天2/: 使用规则.txt  深空之眼-梵天2.pmx
public/model/深空之眼-芭丝特/: 武器.pmx  深空之眼-芭丝特.pmx
public/model/深空之眼-英招/: 武器右.pmx  武器左.pmx  深空之眼-英招.pmx
src/: Animation.tsx  App.tsx  Background.tsx  DebugScene.tsx  Footer.tsx  Header.tsx  MMD.tsx  MMDScene.tsx  Materials.tsx  Model.tsx  Motion.tsx  Outfit.tsx  Skeleton.tsx  Video.tsx  index.d.ts  main.tsx
src/ammo/: ammo.wasm.d.ts  ammo.wasm.js
src/app/: globals.css  layout.tsx  page.tsx
src/assets/: base.css  main.css
src/components/: debug-scene.tsx  loading.tsx  m.tsx  main-scene.tsx  models-panel.tsx  motion-capture.tsx
src/lib/: face-blendshape-solver.ts  solver.ts
(+29 files in other folders)
