[package]
name = "pose_solver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.86"
nalgebra = { version = "0.33.1", features = ["serde-serialize"] }
js-sys = "0.3.64"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "console",
]
